--- a/src/include/header.html
+++ b/src/include/header.html
@@ -92,7 +92,7 @@
 
     <nav class="main center-block">
         <div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
-        <ul>
+        <ul class="nav-list">
             <li class="active"><a href="index.html">首页</a></li>
             <li><a href="#">真人视讯</a></li>
             <li><a href="#">体育赛事</a></li>
@@ -105,8 +105,44 @@
         </ul>
 
         <div class="search-wrap">
-            <input class="input" type="input" placeholder="搜索你喜欢的游戏">
-            <div class="search-btn"></div>
+            <form class="search-form" action="">
+                <input class="input" type="input" placeholder="搜索你喜欢的游戏">
+                <div class="search-btn"></div>
+            </form>
+            <div class="search-rec">
+                <ul class="s-list">
+                    <li class="s-item">
+                        <a href="#">
+                            <img src="../img/sousuoyouxi.png" alt="" width="40" height="40">
+                            <div class="s-cont">
+                                <span>真人视讯</span>
+                                <span class="s-btn">进入游戏</span>
+                            </div>
+                        </a>
+                        <p class="s-text"  style="display:none">真人视讯</p>
+                    </li>
+                    <li class="s-item">
+                        <a href="#" style="display:none">
+                            <img src="../img/sousuoyouxi.png" alt="" width="40" height="40">
+                            <div class="s-cont">
+                                <span>三公</span>
+                                <span class="s-btn">进入游戏</span>
+                            </div>
+                        </a>
+                        <p class="s-text">三公</p>
+                    </li>
+                    <li class="s-item">
+                        <a href="#" style="display:none">
+                            <img src="../img/sousuoyouxi.png" alt="" width="40" height="40">
+                            <div class="s-cont">
+                                <span>牛牛</span>
+                                <span class="s-btn">进入游戏</span>
+                            </div>
+                        </a>
+                        <p class="s-text">牛牛</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
