--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -4,11 +4,11 @@
 	</div>
 	<div class="info">
 		<div class="item"><span class="account">账号：18819456975</span><span class="time">上次登陆时间：2019-01-04 22:25:47</span></div>
-		<div class="item message"><i></i><span class="text">消息：</span><span class="num">(10)</span></div>
+		<div class="item message"><i class="msg-icon"></i><span class="text">消息：</span><span class="num">(10)</span></div>
 		<div class="item level-wrap">
 			<span class="level">LV.01</span>
-			<span class="progress"></span>
-			<span class="text"><b>1</b> /5</span></div>
+			<span class="progress"><i class="pg" data-pg="1"></i></span>
+			<span class="text"><b>1</b>/5</span></div>
 		<div class="btn-group">
 			<button><a href="">我要充值</a></button>
 			<button><a href="">投注记录</a></button>
