--- a/src/scss/passwordAppeal.scss
+++ b/src/scss/passwordAppeal.scss
@@ -31,7 +31,7 @@
 		}
 
 	}
-	#submit {
+	.submit {
 		width: 112px;
 		height: 36px;
 		margin-left: 395px;
@@ -39,5 +39,36 @@
 		margin-bottom: 20px;
 		font-size: 12px;
 		line-height: 1;
+	}
+	.success-tip{
+		text-align: center;
+		margin-top: 55px;
+	}
+}
+#secondBox{
+	.item{
+		display: flex;	
+		align-items: center;
+		.input-wrap{
+			position: relative;
+			input{
+				padding-right: 38px;
+			}
+		}	
+		.icon-eyes{
+			position: absolute;
+			top: 8px;
+			right: 12px;
+			display: block;
+			width: 20px;
+			height: 20px;
+			background-image: url("../img/commonsprite.png");
+			background-repeat: no-repeat;
+			background-position: 0px 0px;
+			cursor: pointer;
+		}
+		.icon-eyes.on{
+			background-position: -25px 0px;
+		}
 	}
 }
