--- a/src/scss/userCenter.scss
+++ b/src/scss/userCenter.scss
@@ -45,11 +45,14 @@
 			}
 
 			.level-wrap {
+				display: flex;
+				align-items: center;
+
 				.level {
 					display: inline-block;
 					width: 62px;
-					line-height: 22px;
-					height: 24px;
+					line-height: 18px;
+					height: 20px;
 					font-size: 12px;
 					background: linear-gradient(90deg, rgba(219, 151, 44, 1) 0%, rgba(219, 176, 44, 1) 100%);
 					border-radius: 12px;
@@ -57,7 +60,27 @@
 					color: #fff;
 				}
 
+				.progress {
+					display: block;
+					width: 180px;
+					height: 8px;
+					overflow: hidden;
+					background: #E6E6E6;
+					border-radius: 4px;
+					margin: 0 8px;
+
+					.pg {
+						display: block;
+						height: 8px;
+						width: 20%;
+						background: #F3A92C;
+						border-radius: 4px;
+					}
+				}
+
 				.text {
+					font-size: 12px;
+
 					b {
 						color: #FF701A;
 						font-weight: 400;
@@ -66,8 +89,19 @@
 			}
 
 			.message {
+				display: flex;
+				align-items: center;
 				font-size: 12px;
 				color: #808080;
+
+				.msg-icon {
+					display: block;
+					width: 16px;
+					height: 16px;
+					background: url(../img/userCenter/xinxi.png) no-repeat;
+					background-size: contain;
+					margin-right: 10px;
+				}
 
 				.num {
 					color: #E83A3A;
@@ -96,9 +130,11 @@
 
 		.sidebar {
 			min-height: 806px;
+
 			.icon {
 				background-image: url('../img/userCenterSprite.png')
 			}
+
 			.wdzh {
 				background-position: -25px -50px;
 
@@ -234,8 +270,17 @@
 						display: block;
 						width: 34px;
 						height: 34px;
-						background-color: #808080;
 						margin-right: 23px;
+						background-repeat: no-repeat;
+						background-size: 34px;
+					}
+
+					.b-tel {
+						background-image: url('../img/shoujihaoma.png')
+					}
+
+					.b-email {
+						background-image: url('../img/youxiang.png')
 					}
 
 					.column {
