--- a/src/include/header2.html
+++ b/src/include/header2.html
@@ -5,12 +5,12 @@
 				<li class="szsy"><a href="#">设为首页</a></li>
 				<li class="scbz"><a href="#">收藏本站</a></li>
 				<li class="yyxz"><a href="#">语言选择</a></li>
-				<li class="xz"><a href="#">永高APP下载</a></li>
+				<li class="xz"><a href="appDown.html" target= "_blank">永高APP下载</a></li>
 			</ul>
 			<ul class="right">
 				<li><a href="#">登录</a></li>
 				<li><a href="#">注册</a></li>
-				<li><a href="customerService.html">客服中心</a></li>
+				<li><a href="passwordAppeal.html">客服中心</a></li>
 				<li><a href="#">免费试玩</a></li>
 				<div class="all-game-btn pull-left">
                     <a class="btn-text" href="javascript:void(0)">所有游戏</a>
