--- a/src/scss/recharge.scss
+++ b/src/scss/recharge.scss
@@ -187,3 +187,163 @@
 		}
 	}
 }
+
+.recharge-modal {
+	.modal-dialog {
+		width: 520px;
+		height: 440px;
+	}
+
+	.modal-title {
+		text-align: center;
+		font-size: 18px;
+		font-weight: 400;
+		padding-top: 6px;
+		line-height: 1;
+	}
+
+	.modal-content {
+		width: 100% !important;
+
+		.modal-body {
+			width: 440px;
+			margin: 0 auto;
+			border-top: 1px solid #E6E6E6;
+			padding-top: 25px;
+
+			.item {
+				margin-left: 115px;
+				margin-bottom: 30px;
+				line-height: 1;
+				font-size: 14px;
+
+				.label {
+					color: #999999;
+				}
+
+				.success {
+					color: #3EBC00;
+				}
+
+				.cost {
+					font-size: 12px;
+					color: #999999;
+				}
+			}
+
+			.btn-group {
+				display: flex;
+				justify-content: center;
+				margin-top: 45px;
+
+				button {
+					width: 100px;
+					height: 36px;
+				}
+
+				.submit {
+					margin-right: 20px;
+				}
+
+				.cancel {
+					background-color: #F4F4F4;
+					border: none;
+				}
+			}
+		}
+	}
+}
+
+.pay-modal {
+	.modal-dialog {
+		width: 520px;
+		height: 540px;
+	}
+
+	.modal-title {
+		text-align: center;
+		font-size: 18px;
+		font-weight: 400;
+		padding-top: 6px;
+		line-height: 1;
+	}
+
+	.modal-content {
+		width: 100% !important;
+
+		.modal-body {
+			width: 440px;
+			margin: 0 auto;
+			border-top: 1px solid #E6E6E6;
+			padding-top: 25px;
+
+			.pay {
+				text-align: center;
+
+				.pay-code {
+					margin-top: 13px;
+					margin-bottom: 38px;
+				}
+
+				.pay-tip {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					width: 210px;
+					height: 86px;
+					margin: 0 auto;
+					background-color: #536A90;
+					border-radius: 4px;
+					font-size: 12px;
+					color: #fff;
+					background-image: url("../img/wallet/saomiaoerweima.png");
+					background-repeat: no-repeat;
+					background-size: 118px 48px;
+					background-position: center;
+				}
+			}
+		}
+	}
+}
+
+.recg-result-modal {
+	.modal-dialog {
+		width: 520px;
+		height: 440px;
+	}
+
+	.modal-content {
+		width: 100% !important;
+
+		.modal-body {
+			width: 440px;
+			margin: 0 auto;
+
+			.recg-result {
+				text-align: center;
+				line-height: 1;
+				background: url("../img/chognzhichenggong.png") no-repeat;
+				background-size: 100px;
+				background-position: center 30px;
+				overflow: hidden;
+
+				.res-tip {
+					margin-top: 146px;
+					margin-bottom: 8px;
+					font-size: 18px;
+				}
+
+				.res-sub-tip {
+					font-size: 12px;
+					color: #999999;
+					margin-bottom: 52px;
+				}
+
+				.ok {
+					width: 170px;
+					height: 36px;
+				}
+			}
+		}
+	}
+}
