--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -10,7 +10,7 @@
 			<span class="progress"><i class="pg" data-pg="1"></i></span>
 			<span class="text"><b>1</b>/5</span></div>
 		<div class="btn-group">
-			<button><a href="">我要充值</a></button>
+			<button><a href="recharge.html">我要充值</a></button>
 			<button><a href="">投注记录</a></button>
 			<button><a href="">财务账单</a></button>
 			<button><a href="myCard.html">银行卡</a></button>
