--- a/src/include/header.html
+++ b/src/include/header.html
@@ -94,11 +94,11 @@
         <div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
         <ul class="nav-list">
             <li class="active"><a href="index.html">首页</a></li>
-            <li><a href="#">真人视讯</a></li>
-            <li><a href="#">体育赛事</a></li>
-            <li><a href="#">彩票游戏</a></li>
-            <li><a href="#">电子游艺</a></li>
-            <li><a href="#">优惠活动</a></li>
+            <li><a href="gameList.html">真人视讯</a></li>
+            <li><a href="gameList.html">体育赛事</a></li>
+            <li><a href="gameList.html">彩票游戏</a></li>
+            <li><a href="gameList.html">电子游艺</a></li>
+            <li><a href="activity.html" target="_blank">优惠活动</a></li>
             <li><a href="centerWallet.html">我的钱包</a></li>
             <li><a href="userCenter.html">用户中心</a></li>
             <li><a href="registAgent.html">代理注册</a></li>
