--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -11,7 +11,7 @@
 			<span class="text"><b>1</b>/5</span></div>
 		<div class="btn-group">
 			<button><a href="recharge.html">我要充值</a></button>
-			<button><a href="">投注记录</a></button>
+			<button><a href="betRecord.html">投注记录</a></button>
 			<button><a href="">财务账单</a></button>
 			<button><a href="myCard.html">银行卡</a></button>
 		</div>
