--- a/src/scss/betRecord.scss
+++ b/src/scss/betRecord.scss
@@ -4,6 +4,7 @@
 		min-height: 806px;
 		margin-top: 20px;
 		margin-bottom: 60px;
+
 		.record-sidebar {
 			width: 210px;
 			margin-right: 20px;
@@ -39,9 +40,127 @@
 				}
 			}
 		}
-		.content{
-			flex:1;
+
+		.content {
+			flex: 1;
 			background-color: #fff;
+
+			.datepicker-group {
+				display: flex;
+				align-items: center;
+				height: 100px;
+				padding: 0 100px;
+				border-bottom: 1px solid #E6E6E6;
+
+				.item {
+					display: flex;
+					align-items: center;
+					margin-right: 40px;
+
+					label {
+						font-size: 14px;
+						margin-right: 13px;
+					}
+
+					.input-box {
+						height: 34px;
+						border-radius: 2px;
+					}
+
+					.time-box {
+						width: 150px;
+					}
+
+				}
+			}
+
+			.record {
+				.top {
+					margin-bottom: 50px;
+
+					.t-item {
+						width: 770px;
+						height: 50px;
+						margin: 0 auto;
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						border-bottom: 1px solid #f0f0f0;
+						font-size: 14px;
+
+						.label{
+							color: #808080;
+						}
+						.st{
+							margin-right: 10px;
+						}
+					}
+				}
+
+				.r-list {
+					border-top: 1px dashed #f0f0f0;
+					.r-item {
+						display: flex;
+						align-items: center;
+						width: 770px;
+						height: 80px;
+						margin: 0 auto;
+						border-bottom: 1px solid #f0f0f0;
+
+						.game-type {
+							display: block;
+							width: 50px;
+							height: 50px;
+							line-height: 48px;
+							border-radius: 50%;
+							overflow: hidden;
+							margin-right: 15px;
+							border: 1px solid #808080;
+							font-size: 14px;
+							text-align: center;
+						}
+						.text{
+							flex: 1;
+							font-size: 14px;
+						}
+						.des{
+							margin-bottom: 8px;
+						}
+						.time{
+							font-size: 12px;
+							color:#808080;
+						}
+						.amount{
+							font-size: 14px;
+							margin-right: 28px;
+						}
+						a{
+							color: #1A8CFF;
+							font-size: 14px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.bet-detail{
+	background-color: #fff;
+	margin-top: 20px;
+	margin-bottom: 60px;
+	padding-top: 34px;
+	min-height: 760px;
+	.bd-list{
+		width: 560px;
+		margin: 0 auto;
+		font-size: 14px;
+		.bd-item{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 50px;
+			border-bottom: 1px solid #f0f0f0;
 		}
 	}
 }
