--- a/src/include/header.html
+++ b/src/include/header.html
@@ -113,9 +113,9 @@
                 <ul class="s-list">
                     <li class="s-item">
                         <a href="#">
-                            <img src="../img/sousuoyouxi.png" alt="" width="40" height="40">
+                            <img src="img/sousuoyouxi.png" alt="" width="40" height="40">
                             <div class="s-cont">
-                                <span>真人视讯</span>
+                                <span>真人视讯2</span>
                                 <span class="s-btn">进入游戏</span>
                             </div>
                         </a>
