--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -1,6 +1,6 @@
 <section class="user-info">
 	<div class="user-avatar-wrap">
-		<img src="../img/userCenter/default.png" alt="">
+		<img src="img/userCenter/default.png" alt="">
 	</div>
 	<div class="info">
 		<div class="item"><span class="account">账号：18819456975</span><span class="time">上次登陆时间：2019-01-04 22:25:47</span></div>
