--- a/src/scss/addBankCard.scss
+++ b/src/scss/addBankCard.scss
@@ -7,11 +7,12 @@
 	overflow: hidden;
 
 	.form-wrap {
-		width: 326px;
-		margin: 0 auto;
 		margin-top: 72px;
 
 		.step1 {
+			width: 326px;
+			margin: 0 auto;
+
 			.item {
 				margin-bottom: 20px;
 
@@ -38,8 +39,61 @@
 				margin-top: 40px;
 			}
 		}
+
+		.step2 {
+			.item {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: 14px;
+				margin-bottom: 20px;
+
+				label {
+					width: 90px;
+					text-align: right;
+				}
+
+				.input-wrap {
+					position: relative;
+					margin-left: 30px;
+
+					input {
+						width: 264px;
+						height: 36px;
+						padding-right: 38px;
+						border-radius: 4px;
+					}
+				}
+
+				.icon-eyes {
+					position: absolute;
+					top: 8px;
+					right: 12px;
+					display: block;
+					width: 20px;
+					height: 20px;
+					background-image: url("../img/commonsprite.png");
+					background-repeat: no-repeat;
+					background-position: 0px 0px;
+					cursor: pointer;
+				}
+
+				.icon-eyes.on {
+					background-position: -25px 0px;
+				}
+			}
+
+			.submit {
+				display: block;
+				width: 112px;
+				height: 36px;
+				margin: 0 auto;
+				margin-top: 40px;
+			}
+		}
 	}
-	.bottom-tip{
+
+	.bottom-tip {
 		width: 930px;
 		margin: 0 auto;
 		position: absolute;
@@ -51,5 +105,32 @@
 		text-align: center;
 		color: #999999;
 		font-size: 12px;
+	}
+
+	.add-success {
+		.text {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 18px;
+			color: #333;
+
+			&::before {
+				content: "";
+				display: block;
+				width: 50px;
+				height: 50px;
+				background: url("../img/chognzhichenggong.png") no-repeat;
+				background-size: contain;
+				margin-right: 18px;
+			}
+		}
+		button {
+			display: block;
+			width: 112px;
+			height: 36px;
+			margin: 0 auto;
+			margin-top: 40px;
+		}
 	}
 }
