--- a/src/scss/securityPwd.scss
+++ b/src/scss/securityPwd.scss
@@ -1,13 +1,15 @@
-.security-pwd{
+.security-pwd {
 	padding: 0 30px;
 	margin-top: 30px;
 	font-size: 12px;
-	.not-set{
-		.tip{
+
+	.not-set {
+		.tip {
 			color: #999999;
 			line-height: 20px;
 		}
-		.cont-wrap{
+
+		.cont-wrap {
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -15,14 +17,16 @@
 			margin-top: 35px;
 			background-color: #FFFBEE;
 			box-shadow: 0 0 10px 2px #ececec;
-			border-radius:4px;
-			.text{
+			border-radius: 4px;
+
+			.text {
 				display: flex;
 				align-items: center;
 				color: #FF701A;
 				margin-right: 28px;
 				vertical-align: middle;
-				.spot{
+
+				.spot {
 					display: inline-block;
 					width: 16px;
 					height: 16px;
@@ -31,11 +35,188 @@
 					margin-right: 6px;
 				}
 			}
-			#submit{
-				width:120px;
-				height:34px;
+
+			#setBtn {
+				width: 120px;
+				height: 34px;
 				font-size: 12px;
 				line-height: 1;
+			}
+		}
+	}
+
+	.set-wrap {
+		.tip {
+			color: #999999;
+			line-height: 20px;
+			margin-bottom: 28px;
+		}
+
+		.step-pic {
+			position: relative;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 98px;
+			margin-bottom: 36px;
+
+			.item {
+				position: relative;
+				z-index: 2;
+				margin-right: 100px;
+
+				.text {
+					font-size: 14px;
+					margin-bottom: 10px;
+					line-height: 1;
+				}
+
+				.circle {
+					width: 34px;
+					height: 34px;
+					margin: 0 auto;
+					line-height: 30px;
+					text-align: center;
+					border: 2px solid #E5E5E5;
+					border-radius: 50%;
+					background-color: #fff;
+				}
+
+				&:last-of-type {
+					margin-right: 0;
+				}
+			}
+
+			.item.cur {
+				color: #FF701A;
+
+				.circle {
+					border-color: #FF701A;
+				}
+			}
+
+			.bar {
+				position: absolute;
+				width: 365px;
+				height: 1px;
+				top: 62px;
+				left: 280px;
+				background-color: #E5E5E5;
+
+				.inline {
+					display: block;
+					height: 1px;
+					width: 0;
+					background-color: #FF701A;
+				}
+			}
+		}
+
+		.first {
+			.input-wrap {
+				display: flex;
+				align-items: center;
+				margin-left: 247px;
+				margin-bottom: 20px;
+
+				label {
+					width: 90px;
+					text-align: right;
+					margin-right: 12px;
+				}
+
+				input {
+					width: 264px;
+					height: 38px;
+					border-radius: 4px;
+				}
+
+				#verCode {
+					width: 172px;
+				}
+
+				.code-btn {
+					width: 82px;
+					height: 36px;
+					color: #1A8CFF;
+					margin-left: 10px;
+				}
+
+			}
+
+			#step1Btn {
+				width: 112px;
+				height: 36px;
+				display: block;
+				margin: 0 auto;
+				margin-top: 40px;
+			}
+		}
+
+		.second {
+			.item {
+				display: flex;
+				align-items: center;
+				margin-left: 247px;
+				margin-bottom: 20px;
+
+				label {
+					display: inline-block;
+					width: 75px;
+					text-align: right;
+				}
+
+				.input-wrap {
+					position: relative;
+
+					input {
+						width: 264px;
+						height: 36px;
+						padding-right: 38px;
+						margin-left: 20px;
+						border-radius: 4px;
+					}
+				}
+
+				.icon-eyes {
+					position: absolute;
+					top: 8px;
+					right: 12px;
+					display: block;
+					width: 20px;
+					height: 20px;
+					background-image: url("../img/commonsprite.png");
+					background-repeat: no-repeat;
+					background-position: 0px 0px;
+					cursor: pointer;
+				}
+
+				.icon-eyes.on {
+					background-position: -25px 0px;
+				}
+			}
+			#step2Btn {
+				width: 112px;
+				height: 36px;
+				display: block;
+				margin: 0 auto;
+				margin-top: 40px;
+			}
+		}
+		.set-success{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 18px;
+			color: #333;
+			&::before{
+				content: "";
+				display: block;
+				width: 50px;
+				height: 50px;
+				background: url("../img/chognzhichenggong.png") no-repeat;
+				background-size: contain;
+				margin-right: 18px;
 			}
 		}
 	}
