--- a/src/include/header.html
+++ b/src/include/header.html
@@ -101,7 +101,8 @@
             <li><a href="activity.html" target="_blank">优惠活动</a></li>
             <li><a href="centerWallet.html">我的钱包</a></li>
             <li><a href="userCenter.html">用户中心</a></li>
-            <li><a href="registAgent.html">代理注册</a></li>
+			<li><a href="registAgent.html">代理注册</a></li>
+			<div class="nav-line"></div>
         </ul>
 
         <div class="search-wrap">
