--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -39,8 +39,8 @@
    ========== */
 
 body {
-	background-color: #F2F3F4;
-	min-width: 1200px;
+    background-color: #F2F3F4;
+    min-width: 1200px;
 }
 
 button {
@@ -111,6 +111,7 @@ button.primary {
 
 header {
     background-color: #fff;
+    border-bottom: 4px solid #ededed;
     .top {
         line-height: 40px;
         height: 40px;
@@ -383,6 +384,7 @@ header {
             margin-right: 18px;
         }
         .nav-list {
+            position: relative;
             flex: 1;
             line-height: 84px;
             li {
@@ -397,16 +399,26 @@ header {
                     color: #333;
                     font-weight: bold;
                 }
-                &.active:after {
-                    content: "";
-                    position: absolute;
-                    display: block;
-                    width: 84px;
-                    height: 4px;
-                    background-color: #146CFE;
-                    border-radius: 4px;
-                    bottom: 0;
-                }
+                // &.active:after {
+                //     content: "";
+                //     position: absolute;
+                //     display: block;
+                //     width: 84px;
+                //     height: 4px;
+                //     background-color: #146CFE;
+                //     border-radius: 4px;
+                //     bottom: 0;
+                // }
+            }
+            .nav-line {
+				position: absolute;
+				left: 0;
+				bottom: -2px;
+                display: block;
+                width: 84px;
+                height: 4px;
+                background-color: #146CFE;
+                border-radius: 4px;
             }
         }
         .search-wrap {
@@ -468,7 +480,7 @@ header {
                         color: #666666;
                     }
                 }
-                .s-text{
+                .s-text {
                     padding: 15px 12px;
                     color: #999;
                     font-size: 12px;
