--- a/src/scss/recordRAW.scss
+++ b/src/scss/recordRAW.scss
@@ -1,1 +1,73 @@
-.record{}
+.record{
+	background-color: #fff;
+	margin-top:20px;
+	margin-bottom: 60px;
+	min-height: 600px;
+	.btn-group{
+		width: 910px;
+		margin:  0 auto;
+		margin-bottom: 50px;	
+		padding-top: 34px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		font-size: 12px;
+		color: #333;
+	}
+	.yg-checkbox {
+		margin-right: 10px;
+	}
+
+	.box-label {
+		font-size: 12px;
+		display: flex;
+		align-items: center;
+	}
+	.del-msg {
+		width: 80px;
+		height: 30px;
+	}
+
+	.record-list{
+		.r-item{
+			display: flex;
+			align-items: center;
+			width: 910px;
+			height: 185px;
+			margin: 0 auto;
+			background: #F8F8F8;
+			color: #333333;
+			border-radius: 4px;
+			padding: 0 24px;
+			font-size: 12px;
+			margin-bottom: 16px;
+			&.selected{
+				background-color: #FFF8EE;
+			}
+		}
+		.rec-wrap{
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			width:758px;
+			height: 185px;
+			margin-left: 30px;
+			div{
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+			}
+			.top{
+				height: 50px;
+				border-bottom: 1px solid #e6e6e6;
+			}
+			.bottom{
+				height: 50px;
+				border-top: 1px solid #e6e6e6;
+			}
+			.sn{
+				font-weight: bold;
+			}
+		}
+	}
+}
