--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -895,6 +895,265 @@ footer {
 		}
 	}
 }
+.login {
+	.title {
+		font-size: 16px;
+		color: #333333;
+		font-weight: bold;
+		margin-bottom: 14px;
+	}
+
+	.input {
+		width: 100%;
+		height: 36px;
+		border-radius: 4px;
+		padding-left: 40px;
+		font-size: 12px;
+		color: #999999;
+		background-repeat: no-repeat;
+		background-image: url("../img/logininputSprite.png");
+
+		&:first-child {
+			margin-bottom: 14px;
+		}
+	}
+
+	.zh {
+		background-position: 10px -62px;
+	}
+
+	.pw {
+		background-position: 10px -132px;
+	}
+
+	.zh:focus {
+		background-position: 10px 8px;
+	}
+
+	.pw:focus {
+		background-position: 10px -202px;
+	}
+
+	.btn {
+		width: 100%;
+		height: 36px;
+		line-height: 1;
+		margin-bottom: 10px;
+	}
+
+	.btn-group {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 14px;
+
+		.remb,
+		a {
+			display: flex;
+			align-items: center;
+			color: #999999;
+			font-size: 12px;
+			font-weight: 400;
+
+			input {
+				margin-right: 6px;
+			}
+		}
+	}
+
+	.login-method-wrap {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		line-height: 24px;
+		font-size: 12px;
+		font-weight: 400;
+		color: #999999;
+
+		.group {
+			display: flex;
+
+			li {
+				display: inline-block;
+				padding: 0 8px;
+				border-left: 1px solid #EBEBEB;
+				line-height: 12px;
+				cursor: pointer;
+
+				&:hover {
+					&.qq:before {
+						background-position: -50px -21px;
+					}
+
+					&.wx:before {
+						background-position: -71px 0px;
+					}
+
+					&.wb:before {
+						background-position: -21px -50px;
+					}
+
+				}
+
+				span {
+					vertical-align: middle;
+				}
+
+				&:first-child {
+					padding-left: 0;
+					border-left: none;
+				}
+
+				&:before {
+					content: "";
+					display: inline-block;
+					vertical-align: middle;
+					margin-right: 4px;
+					width: 16px;
+					height: 16px;
+					background-repeat: no-repeat;
+					background-image: url("../img/loginSprite.png");
+				}
+
+				&.qq:before {
+					background-position: -50px 0px;
+				}
+
+				&.wx:before {
+					background-position: -42px -50px;
+				}
+
+				&.wb:before {
+					background-position: 0px -50px;
+				}
+			}
+		}
+
+		.regist {
+			color: #1A8CFF;
+		}
+	}
+}
+
+//登录注册模态框样式
+
+.regist-modal {
+	.modal-dialog {
+		width: 426px;
+		height: 530px;
+	}
+
+	.modal-title {
+		text-align: center;
+		font-size: 20px;
+	}
+
+	.regist {
+
+		.input-box{
+			position: relative;
+			width: 100%;
+			height: 36px;
+			margin-bottom: 12px;
+			font-size: 12px;
+		
+			.input{
+				width: 100%;
+				height: 100%;
+				padding-left: 40px;
+			}
+			&::before{
+				content: "";
+				position: absolute;
+				top: 8px;
+				left: 10px;
+				display: block;
+				width: 20px;
+				height: 20px;
+				background-repeat: no-repeat;
+				background-image: url("../img/registicon.png");
+			}
+			
+		}
+		.r-nation::before{
+			background-position: -35px 0px;
+
+		}
+		.zh::before{
+			background-position: -35px -35px;
+		}
+		.pw::before{
+			background-position: -70px -35px;
+		}
+		.verCode::before{
+			background-position: -35px -70px;
+		}
+		.yqm::before{
+			background-position: -105px 0px;
+		}
+
+		.r-nation.pressed::before{
+			background-position: 0px 0px;
+		}
+		.zh.pressed::before{
+			background-position: 0px -35px;
+		}
+		.pw.pressed::before{
+			background-position: -70px 0px;
+		}
+		.verCode.pressed::before{
+			background-position: 0px -70px;
+		}
+		.yqm.pressed::before{
+			background-position: -70px -70px;
+		}
+
+		.verCode {
+			display: flex;
+			justify-content: space-between;
+			margin-bottom: 14px;
+
+			#verCode {
+				width: 172px;
+				height: 36px;
+				font-size: 12px;
+				padding-left: 40px;
+			}
+
+			.code-btn {
+				width: 82px;
+				color: #1A8CFF;
+				border-color: #1A8CFF;
+			}
+
+		}
+
+		.protocol {
+			display: flex;
+			align-items: center;
+			font-size: 12px;
+			margin-bottom: 20px;
+
+			input {
+				margin-right: 7px;
+			}
+
+			a {
+				color: #1A8CFF;
+			}
+		}
+
+		.btn {
+			width: 264px;
+			height: 36px;
+			margin-bottom: 30px;
+		}
+		.r-bottom-tip{
+			font-size: 12px;
+			text-align: center;
+		}
+	}
+}
+
 
 // 分页公共样式
 .pagination-wrap {
