--- a/src/include/walletSidebar.html
+++ b/src/include/walletSidebar.html
@@ -12,6 +12,6 @@
 		<a href="withdraw.html"><i class="icon tx"></i>提现</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon edzh"></i>额度转换</a>
+		<a href="amountConversion.html"><i class="icon edzh"></i>额度转换</a>
 	</li>
 </ul>
