--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -11,9 +11,9 @@
 			<span class="text"><b>1</b>/5</span></div>
 		<div class="btn-group">
 			<button><a href="recharge.html">我要充值</a></button>
-			<button><a href="betRecord.html">投注记录</a></button>
-			<button><a href="">财务账单</a></button>
-			<button><a href="myCard.html">银行卡</a></button>
+			<button><a href="betRecord.html" target="_blank">投注记录</a></button>
+			<button><a href="userBill.html" target="_blank">财务账单</a></button>
+			<button><a href="myCard.html" target="_blank">银行卡</a></button>
 		</div>
 	</div>
 </section>
