--- a/src/scss/wdrRecordDetail.scss
+++ b/src/scss/wdrRecordDetail.scss
@@ -4,18 +4,22 @@
 	margin-bottom: 60px;
 	padding-bottom: 80px;
 	min-height: 596px;
+	overflow: hidden;
+
 	.step-pic {
 		position: relative;
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 		align-items: center;
+		width: 758px;
 		height: 98px;
-		margin-bottom: 36px;
+		margin: 0 auto;
+		margin-top: 50px;
 
 		.item {
 			position: relative;
 			z-index: 2;
-			margin-right: 100px;
+			color: #999999;
 
 			.text {
 				font-size: 14px;
@@ -27,8 +31,9 @@
 				width: 36px;
 				height: 36px;
 				margin: 0 auto;
-				border-radius: 50%;
 				background-color: #fff;
+				background-image: url('../img/wdrdetailsprite.png');
+				background-repeat: no-repeat;
 			}
 
 			&:last-of-type {
@@ -37,27 +42,69 @@
 		}
 
 		.item.cur {
-			color: #FF701A;
+			color: #1A8CFF;
 
 			.circle {
-				border-color: #FF701A;
+				border-color: #1A8CFF;
+			}
+		}
+
+		.completed {
+			.circle {
+				background-position: 0px -41px;
+			}
+		}
+
+		.ing {
+			.circle {
+				background-position: 0px 0px;
+			}
+		}
+
+		.not-start {
+			.circle {
+				background-position: -41px 0px;
 			}
 		}
 
 		.bar {
 			position: absolute;
-			width: 365px;
-			height: 1px;
+			width: 720px;
+			height: 2px;
+			left: 25px;
 			top: 62px;
-			left: 280px;
 			background-color: #E5E5E5;
 
 			.inline {
 				display: block;
-				height: 1px;
-				width: 0;
-				background-color: #FF701A;
+				height: 2px;
+				width: 50%;
+				background-color: #1A8CFF;
 			}
 		}
 	}
+
+	.estimate-time{
+		width: 758px;
+		margin: 0 auto;
+		font-size: 12px;
+		text-align: center;
+		text-indent: 30px;
+		color: #999999;
+		margin-bottom: 35px;
+	}
+	.detail-list {
+		width: 758px;
+		margin: 0 auto;
+		font-size: 14px;
+
+		.item {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 50px;
+			border-bottom: 1px solid #f0f0f0;
+		}
+	}
+
 }
