--- a/src/include/pagination.html
+++ b/src/include/pagination.html
@@ -1,14 +1,14 @@
-<div class="pagination-wrap">
-	<span class="prev"><a href="#">上一页</a></span>
-	<span class="active"><a href="#">1</a></span>
-	<span><a href="#">2</a></span>
-	<span><a href="#">3</a></span>
-	<span><a href="#">4</a></span>
-	<span><a href="#">5</a></span>
-	<span><a href="#">6</a></span>
-	<span><a href="#">7</a></span>
-	<span><a href="#">8</a></span>
-	<span><a href="#">9</a></span>
-	<span><a href="#">10</a></span>
-	<span class="next"><a href="#">下一页</a></span>
-</div>
+<ul class="pagination">
+	<li class="prev"><a href="#">上一页</a></li>
+	<li class="active"><a href="#">1</a></li>
+	<li><a href="#">2</a></li>
+	<li><a href="#">3</a></li>
+	<li><a href="#">4</a></li>
+	<li><a href="#">5</a></li>
+	<li><a href="#">6</a></li>
+	<li><a href="#">7</a></li>
+	<li><a href="#">8</a></li>
+	<li><a href="#">9</a></li>
+	<li><a href="#">10</a></li>
+	<li class="next"><a href="#">下一页</a></li>
+</ul>
